# friendly-fortnight

./: README.md  blog.md  main.py  pyproject.toml
blog/: andrews.ipynb  blog.ipynb  blog.md  boxplot.ipynb  custom_markdown.tpl  dbscan.ipynb  empirical_cdf.ipynb  ensemble.ipynb  heatmap_n_correlation_mat.ipynb  histogram.ipynb  isolation.ipynb  kde.ipynb  knn_lof.ipynb  lag.ipynb  original.md  parallel.ipynb  pca.ipynb  qq.ipynb  timeseries.ipynb  umap.ipynb
